Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ Temporary commit content 183
 Temporary commit content 192
 Temporary commit content 200
 Temporary commit content 209
+Temporary commit content 230
