Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ Temporary commit content 237
 Temporary commit content 261
 Temporary commit content 285
 Temporary commit content 293
+Temporary commit content 298
