Added initial project plan

--- a/config.json
+++ b/config.json
@@ -8,3 +8,4 @@ Temporary commit content 44
 Temporary commit content 52
 Temporary commit content 90
 Temporary commit content 91
+Temporary commit content 95
