--- a/config.json
+++ b/config.json
@@ -5,3 +5,4 @@ Temporary commit content 25
 Temporary commit content 32
 Temporary commit content 40
 Temporary commit content 44
+Temporary commit content 52
